maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: ';' expected but 'true' found.
    retrun true
           ^Escaper:8: error: ';' expected but 'true' found.
    retrun true
           ^