maze.lessons.maze.island.IslandMaze.scala.code
def northlibre():Boolean = {
  if(getDirection()==Direction.NORTH && !estFaceMur()){
    retrun true
  }
  droite();
  if(getDirection()==Direction.NORTH && !estFaceMur()){
    retrun true
  }
  gauche();
  return false
}

def keepHandOnSideWall(){
  while(estFaceMur()){
    droite();
  }
  avance();
}

override def run() {
  while(!estSurBiscuit()){
    keepHandOnSideWall();
    if(northlibre()){
      setDirection(Direction.NORTH);
    }
  }
  prendBiscuit();
}